<?xml version="1.0"?>
<package format="2">
  <name>geofencing_pkgs</name>
  <version>0.0.0</version>
  <description>The geofencing package</description>

  <maintainer email="natetoombs@gmail.com">nathan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
