<?xml version="1.0"?>
<package format="2">
  <name>geofencing_pkgs</name>
  <version>0.0.1</version>
  <description>A ROScopter-compatible Geofencing package.</description>

  <maintainer email="natetoombs@gmail.com">Nathan Toombs</maintainer>
  <author email="natetoombs@gmail.com">Nathan Toombs</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <url type="repository">https://github.com/natetoombs/geofencing</url>
  <url type="bugtracker">https://github.com/natetoombs/geofencing/issues</url>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
